// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen hosts config import-export] should create the hosts: the hosts have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ host [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen hosts config import-export] should skip the same hosts: the hosts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= host [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen hosts config import-export] should throw exception when new hosts to import miss mandatory properties hosts: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - host [cfgObjectTest]:
    - lcaPort
    - osInfo
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen hosts config import-export] should throw exception when updating hosts with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - host [cfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen hosts config import-export] should update the modified hosts: the modified hosts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ host [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
